--- a/WebContent/cadastro/findMaterial.xhtml
+++ b/WebContent/cadastro/findMaterial.xhtml
@@ -108,26 +108,27 @@
 			<div class="ui-fluid">
 				<p:panel header="Pesquisa de Material" style="text-align:center">
 					<div class="ui-g">
-						<div class="ui-g-12">
+						<div class="ui-g-12 ui-lg-12 ui-sm-12 ui-md-12">
 							<h:panelGroup id="botoes">
-								<div class="ui-g-12 ui-lg-1">
+								<div class="ui-g-12 ui-lg-1 ui-sm-12 ui-md-12">
 									<p:commandButton value="Incluir"
 										style="height:40px; background: greenyellow !important  ;   
 										background-color: greenyellow; 
 										color:white !important;
 										font-size:large; "
-										action="#{materialBean.novo}" rendered="true" immediate="true"
+										action="#{materialBean.novo}" rendered="#{contextoBean.possuiAcesso('MOV_MAT', 'ATE', 'ADMIN')}" 
+										immediate="true"
 										icon="fa fa-plus" iconPos="right" />
 								</div>
-								<div class="ui-g-12 ui-lg-1">
+								<div class="ui-g-12 ui-lg-1 ui-sm-12 ui-md-12">
 									<p:commandButton id="botaoEditar" value="Editar"
 										style="height:40px; background: lightskyblue !important  ;
 										   background-color: lightskyblue ;
 										   color:white !important;
 										   font-size:large;"
-										immediate="true" action="#{materialBean.edita}"
+										immediate="true" action="#{materialBean.editar}"
 										update="table, @form"
-										rendered="#{materialBean.materialModel.idMaterial > 0 }"
+										rendered="#{materialBean.materialModel.idMaterial > 0 and contextoBean.possuiAcesso('MOV_MAT', 'ATE', 'ADMIN') }"
 										icon=" fa fa-pencil" iconPos="right">
 
 										<f:setPropertyActionListener value="#{d}"
@@ -135,7 +136,7 @@
 									</p:commandButton>
 								</div>
 
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-2 ui-sm-12 ui-md-12">
 									<p:commandButton id="botaoInativar" value="Ativar - Inativar"
 										style="height:40px;background: tomato !important  ;
 										   background-color: tomato ;
@@ -143,13 +144,13 @@
 										   font-size:large;"
 										immediate="true" action="#{fornecedorBean.inativar}"
 										update="table, @form"
-										rendered="#{fornecedorBean.fornecedorModel.idFornecedor > 0 }"
+										rendered="#{materialBean.materialModel.idMaterial > 0 and contextoBean.possuiAcesso('MOV_MAT', 'ATE', 'ADMIN')}"
 										icon="fa fa-check" iconPos="right">
 									</p:commandButton>
 								</div>
 							</h:panelGroup>
 
-							<div class="ui-g-12 ui-lg-3">
+							<div class="ui-g-12 ui-lg-3 ui-sm-12 ui-md-12">
 								<p:selectOneRadio value="#{materialBean.campoBuscaAtivo}">
 									<f:selectItem itemLabel="Todos" itemValue="T" />
 									<f:selectItem itemLabel="Ativo" itemValue="A" />
@@ -159,7 +160,7 @@
 								</p:selectOneRadio>
 							</div>
 
-							<div class="ui-g-12 ui-lg-4">
+							<div class="ui-g-12 ui-lg-4 ui-sm-10 ui-md-10">
 								<div class="ui-inputgroup">
 									<p:inputText value="#{materialBean.campoBuscaNome}" autocomplete="true"
 										placeholder="Buscar pelo Nome" id="inputNome"
@@ -169,7 +170,7 @@
 										update=" inputNome,table" />
 								</div>
 							</div>
-							<div class="ui-g-12 ui-lg-1">
+							<div class="ui-g-12 ui-lg-1 ui-sm-2 ui-md-2">
 									<p:commandLink rendered="#{materialBean.lstMaterial.size() > 0}"	
 									actionListener="#{materialBean.geraRelatorio}">
 									<h:graphicImage	library="img" name="pdf-icon.png" height="40" width="40"  />
@@ -180,14 +181,16 @@
 				</p:panel>
 				<p:panel>
 					<div class="ui-g">
-						<br />
+						<div class="ui-g-12 ui-lg-12 ui-sm-12 ui-md-12">
 						<p:dataTable value="#{materialBean.lstMaterial}" var="d"
 							rowKey="#{d.idMaterial}" selectionMode="single" id="table"
-							rows="10" paginator="true"
+							rows="10" paginator="true" reflow="true"
 							selection="#{materialBean.materialModel}">
 
 							<p:ajax event="rowSelect" listener="#{materialBean.onRowSelect}"
 								update="table,:form:botoes" />
+								
+							<p:ajax event="rowDblselect" listener="#{materialBean.onRowSelectDouble}" />	
 
 							<p:column headerText="Material" priority="1"
 								style="overflow: hidden;text-align: left; font-size: large">
@@ -211,7 +214,7 @@
 							</p:column>
 							
 							<p:column headerText="Status" priority="5"
-								style="overflow: hidden;text-align: center; font-size: large; width: 5%">
+								style="overflow: hidden;text-align: center; font-size: large; width: 90px">
 								<p:outputLabel value="Ativo" rendered="#{d.ativo eq 'A'}"
 									style="color : green" />
 								<p:outputLabel value="Inativo" rendered="#{d.ativo eq 'I'}"
@@ -230,6 +233,7 @@
 								</center>
 							</p:column> -->
 						</p:dataTable>
+						</div>
 					</div>
 				</p:panel>
 			</div>
