--- a/WebContent/WEB-INF/topbar.xhtml
+++ b/WebContent/WEB-INF/topbar.xhtml
@@ -44,25 +44,22 @@ a:hover {
  -->
 		<ul id="topbar-menu" class="fadeInDown animated">
 			
-			<li><a href="#"> <i class="topbar-icon fa fa-fw fa-user"></i>
-					<span class="topbar-item-name" style="font-size: 15px;">Perfil - #{loginBean.nomePerfil}</span>
-			</a></li>
 			
 			<li><a href="#"> <i class="topbar-icon fa fa-fw fa-user"></i>
-					<span class="topbar-item-name" style="font-size: 15px;">Ajustes</span>
+					<span class="topbar-item-name" style="font-size: large;">Ajustes</span>
 			</a>
 			
 				<ul>
 				
-					<li role="menuitem"><a
+					<!-- <li role="menuitem"><a
 						href="#{facesContext.externalContext.requestContextPath}/publico/alterarSenha.jsf?faces-redirect=true">
 							<i class="fa fa-fw fa-user"></i> <span style="font-size: 15px;">Alterar Senha</span>
-					</a></li>
+					</a></li> -->
 
-					<sec:ifAnyGranted roles="ATE,ADMIN">
+					<sec:ifAnyGranted roles="ADMIN,ACE_USU">
 						<li role="menuitem"><a
 							href="#{facesContext.externalContext.requestContextPath}/cadastro/findUsuario.jsf?faces-redirect=true">
-								<i class="fa fa-fw fa-user"></i> <span style="font-size: 15px;">Cadastrar Usuário</span>
+								<i class="fa fa-fw fa-user"></i> <span style="font-size:large;">Cadastrar Usuário</span>
 						</a></li>
 					</sec:ifAnyGranted>
 
@@ -71,7 +68,7 @@ a:hover {
 			<li><a href="#"
 				onclick="javascript:logout('#{request.contextPath}')"> <i
 					class="fa fa-fw fa-sign-out"></i> <span class="topbar-item-name"
-					style="font-size: 15px; font-weight: bold; font-size: 15px;">Logout</span>
+					style="font-size: 15px; font-weight: bold;font-size:large;">Logout</span>
 					<!--  <span class="topbar-badge animated rubberBand">2</span> -->
 			</a></li>
 			<!-- <li><a href="#"> <span class="topbar-item-name"
